Revert "Implementação do cadastro de usuário e confirmação de  conta"

--- a/Codigo/Frota/FrotaWeb/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/Codigo/Frota/FrotaWeb/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -67,7 +67,7 @@
         }
 
         .form-container {
-            width: 400px;
+            width: 300px;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -176,7 +176,7 @@
             <div class="form-container">
                 <img src="~/img/logo.png" alt="Frota logo"/>
                 <div class="form">
-                    <h1>Email de confirmação enviado</h1>
+                    <h1>@ViewData["Title"]</h1>
                     <p>
                         Por favor, verifique a caixa de entrada do seu email para redefinir sua senha.
                     </p>
