--- a/Codigo/Frota/FrotaWeb/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Codigo/Frota/FrotaWeb/Areas/Identity/Pages/Account/Login.cshtml
@@ -103,8 +103,8 @@
             .form input {
                 padding: 10px;
                 font-size: 1em;
-                border: 2px solid rgba(0, 0, 0, 0.25);
-                border-radius: 10px;
+                border: 1px solid rgba(0, 0, 0, 0.25);
+                border-radius: 5px;
                 background-color: #fff;
             }
 
@@ -140,13 +140,13 @@
                 color: white;
                 background-color: #0C69AB;
                 border: none;
-                border-radius: 10px;
+                border-radius: 5px;
                 cursor: pointer;
                 transition: background-color 0.3s ease;
             }
 
                 .form button:hover {
-                    background-color: #0B83D9;
+                    background-color: #155cb0;
                 }
 
         .register-link {
@@ -281,6 +281,7 @@
                 </div>
                 <div class="register-link">
                     <a asp-page="./ForgotPassword">Esqueceu a senha?</a>
+                    <div>Não tem uma conta?<a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Registre-se</a></div>
                 </div>
             </div>
         </form>
