--- a/Codigo/Frota/FrotaWeb/Views/Pessoa/Delete.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Pessoa/Delete.cshtml
@@ -1,110 +1,106 @@
 ﻿@model FrotaWeb.Models.PessoaViewModel
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>PessoaViewModel</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Cpf)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cpf)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Cep)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cep)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Rua)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Rua)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Bairro)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Bairro)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Complemento)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Complemento)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Numero)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Numero)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Cidade)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cidade)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Estado)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Estado)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdFrota)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdFrota)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdPapelPessoa)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdPapelPessoa)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Ativo)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Ativo)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.StatusAtivo)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.StatusAtivo)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Telefone)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Telefone)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
-</div>
+<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/form.css" asp-append-version="true" />
+
+<main class="container mt-4">
+    <h4 class="page-title fs-2">
+        <i class="fa fa-user mr-3"></i>
+        Pessoa
+    </h4>
+    <h1 class="my-text-label fs-3 mt-4 mb-4">Excluir Pessoa</h1>
+    <div class="creator-form fs-5">
+        <div class="row mb-3">
+            <div class="col-md-6">
+                <div class="type-container offset-md-1 itens-center">
+                    <label class="label">Nome</label>
+                    <p>@Model.Nome</p>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="type-container offset-md-2 itens-center">
+                    <label class="label">Cpf</label>
+                    <p>@Model.Cpf</p>
+                </div>
+            </div>
+        </div>
+        <div class="row mb-3">
+            <div class="col-md-6">
+                <div class="type-container offset-md-1 itens-center">
+                    <label class="label">Cep</label>
+                    <p>@Model.Cep</p>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="type-container offset-md-2 itens-center">
+                    <label class="label">Rua</label>
+                    <p>@Model.Rua</p>
+                </div>
+            </div>
+        </div>
+        <div class="row mb-3">
+            <div class="col-md-6">
+                <div class="type-container offset-md-1 itens-center">
+                    <label class="label">Bairro</label>
+                    <p>@Model.Bairro</p>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="type-container offset-md-2 itens-center">
+                    <label class="label">Complemento</label>
+                    <p>@Model.Complemento</p>
+                </div>
+            </div>
+        </div>
+        <div class="row mb-3">
+            <div class="col-md-6">
+                <div class="type-container offset-md-1 itens-center">
+                    <label class="label">Número</label>
+                    <p>@Model.Numero</p>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="type-container offset-md-2 itens-center">
+                    <label class="label">Cidade</label>
+                    <p>@Model.Cidade</p>
+                </div>
+            </div>
+        </div>
+        <div class="row mb-3">
+            <div class="col-md-6">
+                <div class="type-container offset-md-1 itens-center">
+                    <label class="label">Estado</label>
+                    <p>@Model.Estado</p>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="type-container offset-md-2 itens-center">
+                    <label class="label">Frota</label>
+                    <p>@Model.IdFrota</p>
+                </div>
+            </div>
+        </div>
+        <div class="row mb-3">
+            <div class="col-md-6">
+                <div class="type-container offset-md-1 itens-center">
+                    <label class="label">Pessoa</label>
+                    <p>@Model.IdPapelPessoa</p>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="type-container offset-md-2 itens-center">
+                    <label class="label">Ativo</label>
+                    <p>@Model.Ativo</p>
+                </div>
+            </div>
+        </div>
+        <form asp-action="Delete" class="row mt-4">
+            <div class="col-12 col-md-6 mb-2 mb-md-0 itens-center">
+                <a asp-action="Index" class="my-button btn btn-danger btn-sm w-50 w-md-auto">Voltar</a>
+            </div>
+            <div class="col-12 col-md-6 d-flex justify-content-md-end itens-center">
+                <input type="submit" value="Excluir" class="my-button btn btn-success btn-sm w-50 w-md-auto botao-sucesso" />
+            </div>
+        </form>
+    </div>
+</main>
