--- a/Codigo/Frota/FrotaWeb/Views/Shared/_LoginPartial.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Identity
-@using Core;
+@using FrotaWeb.Areas.Identity.Data
 
 @inject SignInManager<UsuarioIdentity> SignInManager
 @inject UserManager<UsuarioIdentity> UserManager
