--- a/Codigo/Frota/FrotaWeb/Views/Veiculo/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Veiculo/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<FrotaWeb.Models.VeiculoViewModel>
+ï»¿@model IEnumerable<FrotaWeb.Models.VeiculoViewModel>
 
 <link rel="stylesheet" href="~/css/index-pages.css" asp-append-version="true" />
 
@@ -7,7 +7,7 @@
         <a href="javascript:history.back()" class="voltar">
             <i class="fa fa-arrow-left"></i> Voltar
         </a>
-        <h1>Veículos</h1>
+        <h1>Veï¿½culos</h1>
         <div class="acoes">
             <a asp-action="Create" class="btn btn-primario">Criar</a>
         </div>
