--- a/Codigo/Frota/FrotaWeb/wwwroot/css/navBar.css
+++ b/Codigo/Frota/FrotaWeb/wwwroot/css/navBar.css
@@ -27,7 +27,7 @@ body {
     }
 
 .sidebar {
-    position: fixed;
+    position: absolute;
     z-index: 15;
     top: 15px;
     left: 15px;
@@ -35,16 +35,14 @@ body {
     width: var(--width-closed);
     border-radius: 10px;
     background: #ffffff; /* Cor de fundo da barra lateral */
-    transition: width 0.3s ease-in-out;
+    transition: width 0.3s;
     box-shadow: 0 0 10px rgb(0 0 0 / 10%); /* Sombra do ícone */
     border: 0.5px solid #ccc;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
 }
 
     .sidebar.open {
         width: var(--width-open);
+
     }
 
 /* Remove as bordas de foco de links e botões */
@@ -95,19 +93,16 @@ button.toggle {
 }
 
 .sidebar.open .toggle {
-    transform: rotate(180deg);
+    rotate: 180deg;
 }
 
-.inner {
-    flex: 1;
-    position: relative;
-    overflow-y: auto;
-    scrollbar-width: none;
+.sidebar .inner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 260px;
 }
-
-    .inner::-webkit-scrollbar {
-        display: none;
-    }
 
 .sidebar .header {
     display: flex;
@@ -127,9 +122,8 @@ button.toggle {
 
 .sidebar .header h1 {
     margin-left: 12px;
-    margin-top: 2px;
     font-weight: 800;
-    font-size: 28px;
+    font-size: 16px;
     letter-spacing: 2px;
     color: #0C69AB; /* Cor do título */
 }
@@ -142,7 +136,6 @@ button.toggle {
     position: relative;
     display: grid;
     margin-top: 25px;
-    white-space: nowrap;
 }
 
     .sidebar .menu::after {
@@ -153,7 +146,7 @@ button.toggle {
         height: 50px;
         width: 4px;
         background: #0C69AB; /* Cor da barra de destaque */
-        transform: translate(0, var(--top));
+        translate: 0 var(--top);
         transition: 0.3s;
     }
 
@@ -163,7 +156,8 @@ button.toggle {
         align-items: center;
         height: 50px;
         width: var(--width-closed);
-        font-size: 16px;
+        font-size: 14px;
+        text-transform: capitalize;
         line-height: 1;
         padding: 0 22px;
         color: inherit;
@@ -172,9 +166,9 @@ button.toggle {
         transition: 0.3s;
     }
 
-        .sidebar .menu button:focus {
-            outline: none;
-        }
+    .sidebar .menu button:focus {
+        outline: none;
+    }
 
         .sidebar .menu button p {
             margin: auto;
@@ -194,10 +188,6 @@ button.toggle {
     cursor: default;
 }
 
-.menu button:hover {
-    cursor: pointer !important;
-}
-
 .sidebar .menu button:hover > span {
     opacity: 1;
 }
@@ -205,7 +195,6 @@ button.toggle {
 .sidebar .menu button p,
 .sidebar .header h1 {
     opacity: 0;
-    transition: opacity 0.2s ease-in-out;
 }
 
 .sidebar.open :is(.sidebar .menu button p, .sidebar .header h1) {
@@ -213,7 +202,7 @@ button.toggle {
 }
 
 .sidebar.open .logo {
-    transform: scale(1);
+    scale: 1;
 }
 
 .sidebar .menu button > img {
@@ -235,34 +224,31 @@ button.toggle {
     color: inherit;
     cursor: pointer;
     opacity: 0.8;
-    transition: width 0.3s, opacity 0.6s;
-    border-top: 1px solid #dcdcdc;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    transition: width 0.8s, opacity 0.3s;
 }
 
 .sidebar.open .login-button {
     width: var(--width-open); /* A largura expandida */
 }
 
-.login-button a {
-    display: flex;
-    text-decoration: none;
-    flex-direction: row;
-    align-items: center;
-}
+    .login-button a {
+        display: flex;
+        text-decoration: none;
+        flex-direction: row;
+        align-items: center;
+    }
 
     .login-button a:hover {
         text-decoration: none;
     }
+    
 
-
-    .login-button a p {
-        max-width: 140px;
-        overflow: hidden;
-        margin-left: 15px;
-        font-weight: 600;
-    }
+        .login-button a p {
+            max-width: 140px;
+            overflow: hidden;
+            margin-left: 15px;
+            font-weight: 600;
+        }
 
 .profile-link {
     margin: auto;
@@ -320,44 +306,6 @@ button.toggle {
             border-radius: 4px;
         }
 
-.sidebar:not(.open) .submenu {
-    display: none;
-}
-
 .expand-icon {
     margin-left: auto; /* Move o ícone de expansão para a direita */
-}
-
-
-
-/* Deixa o menu aberto para telas grades */
-@media (min-width: 768px) {
-    .sidebar {
-        width: var(--width-open) !important;
-    }
-
-        .sidebar .menu button p,
-        .sidebar .header h1 {
-            opacity: 1 !important;
-        }
-
-        .sidebar .toggle {
-            display: none !important;
-        }
-}
-
-/* Para recolher o menu aberto em telas pequenas */
-@media (max-width: 767px) {
-    .sidebar {
-        width: var(--width-closed);
-    }
-
-        .sidebar .menu button p,
-        .sidebar .header h1 {
-            opacity: 0;
-        }
-
-        .sidebar .toggle {
-            display: block;
-        }
 }
