--- a/Codigo/Frota/FrotaWeb/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Codigo/Frota/FrotaWeb/Areas/Identity/Pages/Account/Login.cshtml
@@ -7,8 +7,6 @@
 }
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-    <title>Frota Pública</title>
-    <link rel="icon" type="image/x-icon" href="~/logo.ico">
     <style>
         header, #sidebar {
             display: none;
@@ -103,8 +101,8 @@
             .form input {
                 padding: 10px;
                 font-size: 1em;
-                border: 1px solid rgba(0, 0, 0, 0.25);
-                border-radius: 5px;
+                border: 2px solid rgba(0, 0, 0, 0.25);
+                border-radius: 10px;
                 background-color: #fff;
             }
 
@@ -140,13 +138,13 @@
                 color: white;
                 background-color: #0C69AB;
                 border: none;
-                border-radius: 5px;
+                border-radius: 10px;
                 cursor: pointer;
                 transition: background-color 0.3s ease;
             }
 
                 .form button:hover {
-                    background-color: #155cb0;
+                    background-color: #0B83D9;
                 }
 
         .register-link {
@@ -281,7 +279,6 @@
                 </div>
                 <div class="register-link">
                     <a asp-page="./ForgotPassword">Esqueceu a senha?</a>
-                    <div>Não tem uma conta?<a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Registre-se</a></div>
                 </div>
             </div>
         </form>
