--- a/Codigo/Frota/FrotaWeb/Views/Abastecimento/Edit.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Abastecimento/Edit.cshtml
@@ -7,11 +7,6 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="IdPessoa" class="control-label"></label>
-                <input asp-for="IdPessoa" class="form-control" />
-                <span asp-validation-for="IdPessoa" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="IdFornecedor" class="control-label"></label>
                 <input asp-for="IdFornecedor" class="form-control" />
                 <span asp-validation-for="IdFornecedor" class="text-danger"></span>
@@ -37,14 +32,14 @@
                 <span asp-validation-for="Litros" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" style="margin-left:200px;" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index" style="margin-left:200px;">Back to List</a>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
