--- a/Codigo/Frota/FrotaWeb/Views/Abastecimento/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Abastecimento/Index.cshtml
@@ -17,6 +17,9 @@
             <thead>
                 <tr>
                     <th>
+                        @Html.DisplayNameFor(model => model.Id)
+                    </th>
+                    <th>
                         @Html.DisplayNameFor(model => model.IdFornecedor)
                     </th>
                     <th>
@@ -35,6 +38,9 @@
                 @foreach (var item in Model)
                 {
                     <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Id)
+                        </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.IdFornecedor)
                         </td>
