--- a/Codigo/Frota/FrotaWeb/Views/Home/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
-﻿<link rel="stylesheet" href="~/css/home.css">
+﻿@{
+    ViewData["Title"] = "Home Page";
+}
 
-<div class="container-main text-center banner">
-    <h1 class="display-4 welcome-text">Bem-vindo ao FrotaPública!</h1>
-    <img src="/img/logo.svg" alt="Logo" class="banner-image">
+<div class="text-center">
+    <h1 class="display-4">Bem vindo ao FrotaPública!</h1>
 </div>
