--- a/Codigo/Frota/FrotaWeb/Views/Veiculo/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Veiculo/Index.cshtml
@@ -1,13 +1,13 @@
-ï»¿@model IEnumerable<FrotaWeb.Models.VeiculoViewModel>
+@model IEnumerable<FrotaWeb.Models.VeiculoViewModel>
 
 <link rel="stylesheet" href="~/css/index-pages.css" asp-append-version="true" />
 
-<div class="container-main">
+<main class="main_content container">
     <div class="titulo-pagina">
         <a href="javascript:history.back()" class="voltar">
             <i class="fa fa-arrow-left"></i> Voltar
         </a>
-        <h1>Veï¿½culos</h1>
+        <h1>Veículos</h1>
         <div class="acoes">
             <a asp-action="Create" class="btn btn-primario">Criar</a>
         </div>
@@ -122,4 +122,4 @@
             }
         </nav>
     }
-</div>
+</main>
