--- a/Codigo/Frota/FrotaWeb/Views/Abastecimento/Create.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Abastecimento/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model FrotaWeb.Models.AbastecimentoViewModel
+@model FrotaWeb.Models.AbastecimentoViewModel
 
 <h4>AbastecimentoViewModel</h4>
 <hr />
@@ -32,14 +32,14 @@
                 <span asp-validation-for="Litros" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" style="margin-left:200px;" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" style="margin-left:200px;">Back to List</a>
 </div>
 
 @section Scripts {
