--- a/Codigo/Frota/FrotaWeb/Views/Abastecimento/Delete.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Abastecimento/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model FrotaWeb.Models.AbastecimentoViewModel
+@model FrotaWeb.Models.AbastecimentoViewModel
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
@@ -56,7 +56,7 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" style="margin-left:200px;"/> |
+        <a asp-action="Index" style="margin-left:200px;">Back to List</a>
     </form>
 </div>
