--- a/Codigo/Frota/FrotaWeb/Views/Pessoa/Create.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Pessoa/Create.cshtml
@@ -11,7 +11,7 @@
 
 <link rel="stylesheet" href="~/css/form-pages.css" asp-append-version="true" />
 
-<main>
+<main class="main_content container">
     <div class="titulo-pagina">
         <a href="javascript:history.back()" class="voltar">
             <i class="fa fa-arrow-left"></i> Voltar
