--- a/Codigo/Frota/FrotaWeb/wwwroot/css/site.css
+++ b/Codigo/Frota/FrotaWeb/wwwroot/css/site.css
@@ -91,3 +91,88 @@ button.close:focus {
 .container-main {
     width: 98%;
 }
+
+/*Estilização do popup de notificação*/
+.popup__close {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    cursor: pointer;
+    font-size: 16px;
+    color: #fff;
+    background-color: #f44336;
+    border: none;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    line-height: 30px;
+    font-weight: bold;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+    .popup__close:hover {
+        background-color: #d32f2f;
+        transform: scale(1.1);
+    }
+
+.popup {
+    position: fixed;
+    top: 200px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    backdrop-filter: blur(10px);
+    background-color: #ffffff80;
+    padding: 10px;
+    border-radius: 10px;
+    border: 2px solid #00000020;
+    width: 480px;
+    height: 292px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.popup__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+}
+
+    .popup__content img {
+        width: 103px;
+        height: 103px;
+    }
+
+    .popup__content h2 {
+        font-size: 20px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        font-weight: 600;
+        height: 30px;
+    }
+
+.labelmessage {
+    border-radius: 10px;
+    color: #000000;
+    background-color: #00000030;
+    padding: 10px;
+    text-align: center;
+    height: 83px;
+    width: 435px;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    visibility: visible !important;
+    overflow: hidden;
+    align-items: center;
+    justify-content: center;
+    line-height: normal;
+}
+
+.popup__text{
+    margin: auto;
+    font-weight: 600;
+}
